Add Java 21 MR support and update deps
Introduce Java 21 multi-release support and adjust build/dependency configuration: add src/java21 sources and ExpansionUtil, add compileJava21 task, package classes into META-INF/versions/21, set up publishing/mavenLocal, add repositories (including flashyreese), and adjust loom and LWJGL settings. Update dependencies and target platform to older 1.20.1-compatible artifacts (fabric API, Sodium/iris/Chunky/etc.), tweak mod versions in gradle.properties, and add runtime VM args for runs.

Code changes and refactors: remove GPUSelectorWindows2; add/modify mixins and new utility classes; refactor VoxyClient initialization to use factory with render-backend readiness flags and warn when Java21 native compression isn't available; update VoxyClientInstance realms detection and Sodium import paths. Update ModMenuIntegration to handle Sodium's read-only options, adjust VoxyConfig to use a safer default for serviceThreads, add LOADED_WHILE_UNAVAILABLE flag and reloadAfterVoxyAvailable helper, and tweak VoxyConfigScreenPages slider bounds/controls accordingly.

Other: drastically simplify README and add an unofficial Discord link. Overall this patch modernizes the build for multi-release Java 21 usage, aligns dependency versions, and applies several compatibility and initialization fixes.