@@ -36,7 +36,7 @@ public class RenderResourceReuse {
     public static GlTexture getOrCreateModelStoreTextureAtlas() {
         GlTexture atlas = null;
         if (!MODEL_TEXTURE_CACHE.isEmpty()) {
-            atlas = MODEL_TEXTURE_CACHE.removeFirst().zero();
+            atlas = MODEL_TEXTURE_CACHE.remove(0).zero();
         } else {
             atlas = new GlTexture().store(GL_RGBA8,
                         Integer.numberOfTrailingZeros(ModelFactory.MODEL_TEXTURE_SIZE),
@@ -53,7 +53,7 @@ public class RenderResourceReuse {
     static GlBuffer getOrCreateGeometryBuffer() {
         GlBuffer buffer = null;
         if (!GEOMETRY_BUFFER_CACHE.isEmpty()) {
-            buffer = GEOMETRY_BUFFER_CACHE.removeFirst();
+            buffer = GEOMETRY_BUFFER_CACHE.remove(0);
             //Reuse buffer, todo: probably check the geometry size and try upsize if possible
         } else {
             long capacity = getGeometryBufferSize();
