@@ -4,10 +4,8 @@ import me.cortex.voxy.client.core.model.ModelFactory;
 import org.joml.Matrix4f;
 import org.joml.Vector3f;
 import org.joml.Vector4f;
-import org.lwjgl.system.MemoryUtil;
 
 import java.util.Arrays;
-import java.util.Random;
 
 public class SoftwareRasterizer {
     public static final int TARGET_SIZE = ModelFactory.MODEL_TEXTURE_SIZE;
@@ -63,8 +61,8 @@ public class SoftwareRasterizer {
     }
 
     private int sampleTexture(float u, float v) {
-        int pu = Math.clamp(Math.round(u*this.samplerWidth-0.5f), 0, this.samplerWidth-1);
-        int pv = Math.clamp(Math.round(v*this.samplerHeight-0.5f), 0, this.samplerHeight-1);
+        int pu = Math.max(0, Math.min(Math.round(u * this.samplerWidth - 0.5f), this.samplerWidth - 1));
+        int pv = Math.max(0, Math.min(Math.round(v * this.samplerHeight - 0.5f), this.samplerHeight - 1));
         return this.samplerTexture[this.samplerWidth*pv+pu];
     }
 
@@ -194,7 +192,6 @@ public class SoftwareRasterizer {
         this.framebuffer[index] &= ~(1L<<39);
         this.framebuffer[index] |= ((long)(meta&4))<<37;
 
-        int srcColour = (int) this.framebuffer[index];
         this.framebuffer[index] &= ~Integer.toUnsignedLong(-1);
 
         //When blending is enabled do this
