@@ -410,7 +410,10 @@ public class TestNodeManager {
             return true;
         } catch (Exception e) {
             var trace = new ArrayList<>(List.of(e.getStackTrace()));
-            while (!trace.getLast().getMethodName().equals("runTest")) trace.removeLast();//Very hacky budget filter
+            // Very hacky budget filter: remove stack frames until we reach runTest (if present)
+            while (!trace.isEmpty() && !trace.get(trace.size() - 1).getMethodName().equals("runTest")) {
+                trace.remove(trace.size() - 1);
+            }
             synchronized (traces) {
                 if (traces.add(trace)) {
                     e.printStackTrace();
